@@ -1,3 +1,6 @@
+2010-10-10 Harri Pitkänen <hatapitk@iki.fi>
+	* Add configure option --disable-malaga for disabling Malaga backend.
+
 2010-10-09 Harri Pitkänen <hatapitk@iki.fi>
 	* GC: Accept capitalized Roman numerals.
 
